--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script>
         $(document).ready(function() {
             $('#countdown').countdown({
-                datetime: 'April 23, 2019 12:00:00',
-                success: function(response) {
+                datetime: 'April 30, 2019 12:00:00',
+                success: function(response) { // optional
                     console.log(response);
                 }
             });
